<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metafora</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about_string">About</string>
    <string name="menu_website_string">Website</string>
    <string name="search_field">Search</string>
    <string name="routes_button_string">FIND</string>
    <string name ="directions_page_string">DIRECTIONS</string>
    <string name="route1">4 min</string>
    <string name="route2">2</string>
    <string name="route3">3</string>
    <string name="directions">Back</string>
    <string name="metaforaString">METAFORA</string>
    <string name="desc">Route selection Button</string>
    <string name="choose_time">SELECT TIME</string>
    <string name="searchBarText"> </string>
    <string name="placeDetailsWebsiteString">WEBSITE</string>
    <string name="placeDetailsCallString">CALL</string>
    <string name="emptystring">(empty)</string>
    <string name="app_version">Version 0.0.7</string>
    
    <string name="app_version_string">ver 0.0.7</string>
    <string name="metafora_startup_screen_string">METAFORA</string>
    <string name="llc_startup_screen_string">LLC</string>
    <string name="transportation_simplified_string">Transportaion. Simplified.</string>
    <string name="lets_go_string">let\'s go</string>
    <string name="generic_route_button_string">2 min</string>
    
    
    
</resources>
