
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	tools:context=".LocationSearchFragment"
        android:id="@+id/linearLayout1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/searchBar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/searchpurple"
                android:ems="10"
                android:hint="@string/search_field"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:text="@string/searchBarText" >

                <requestFocus />
            </AutoCompleteTextView>

            <Button
                android:id="@+id/clearSearchBarButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="@color/searchpurple"
                android:text="x"
                android:textColor="@color/exitblue" />

            <Button
                android:id="@+id/routeMenuButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:background="@drawable/backbtn"
                
                android:text="@string/routes_button_string"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/locationSearchProgressBar"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/purple"
                android:visibility="gone"
                android:indeterminate="true" />

        </LinearLayout>

                <fragment
                    android:id="@+id/mainmap"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

  

    </LinearLayout>